--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     jenkinsPlugins(group: 'org.jenkins-ci.plugins', name: 'credentials', version: '2.1.16', ext:'jar')
     jenkinsPlugins(group: 'org.jenkins-ci.plugins', name: 'plain-credentials', version: '1.4', ext:'jar')
 
+    compile(group: 'log4j', name: 'log4j', version: '1.2.17')
+
     compile(group: 'com.intland', name: 'codebeamer-api-client', version: '1.0-SNAPSHOT')
 
     jenkinsTest('org.jenkins-ci.main:jenkins-test-harness:2.8@jar')
