add and check additional configuration

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ repositories {
 
 compileJava {
     options.compilerArgs += '-Xlint:unchecked'
+    options.compilerArgs += '-Xlint:deprecation'
 }
 
 dependencies {
