--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
     compile(group: 'log4j', name: 'log4j', version: '1.2.17')
 
-    compile(group: 'com.intland', name: 'codebeamer-api-client', version: '1.0-SNAPSHOT')
+    compile files('libs/codebeamer-api-client-1.0.0-all.jar')
 
     jenkinsTest('org.jenkins-ci.main:jenkins-test-harness:2.8@jar')
 }
